--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="about-descr">
 
           <p class="p-heading">Hello, I'm Çayan Aslan. I am a university student, my hobbies are drinking coffee and traveling. </p>
-          <p class="separator"> I worked at "ATV TURKIYE" television channel for about a year, then I worked as a guest coordinator at "TV8,5" television channel for a short time. I worked at istanbul development university as a cameraman for about 1 month. </p>
+          <p class="separator"> I worked at "ATV TURKIYE" television channel for about a year, then I worked as a guest coordinator at "TV8,5" television channel for a short time. I worked at Istanbul Gelisim University as a cameraman for about 1 month. </p>
 
         </div>
 
