--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="col-lg-7">
         <div class="about-descr">
 
-          <p class="p-heading"> Hello, I am Çayan Aslan. </p>
+          <p class="p-heading"> Çayan Aslan </p>
           <p class="separator"> I worked as a cameraman, producer assistant and reporter assistant on the mainstream channel in the television industry. I also worked as a content production photographer and videographer in the corporate communications department at Istanbul Gelisim University. </p>
 
         </div>
